//
//  DictionaryConstants.swift
//  Collections
//
//  Created by Artem Shcherban on 29.04.2022.
//

import Foundation

enum DictionaryConstants {
    
    static let buttonsTitles = ["Array", "Dictionary"]
    
    static let tasksTitles = ["Find the first element in array",
                              "Find the first element in dictionary",
                              "Find the last element in array",
                              "Find the last element in dictionary",
                              "Search for non-existing element in array",
                              "Search for non-existing element in dictionary"]
    
    static let fistPartOfTitle = ["First element search time: ", "First element search time: ",
                                  "Last element search time: ", "Last element search time: ",
                                  "Non-existing element search time: ", "Non-existing element search time: "]
    
    static let elementsForSearch = ["Name0", "Name0", "Name9999999", "Name9999999", "Name99fdd999", "Name99fdd999"]
    
    static let arrayButtonID = "arrayButton"
    static let dictionaryButtonID = "dictionaryButton"
    
}
