//
//  ArrayConstants.swift
//  Collections
//
//  Created by Artem Shcherban on 29.04.2022.
//

import Foundation

enum ArrayConstants {
    
    static let bigButtonTitle = "Create Int array with \(AppConstants.maximumElements.decimalFormat()) elements"
    
    static let taskTitles = ["Insert \(AppConstants.numberOfElements) elements at the begining of the array one-by-one",
                              "Insert \(AppConstants.numberOfElements) elements at the begining of the array",
                              "Insert \(AppConstants.numberOfElements) elements at the middle of the array one-by-one",
                              "Insert \(AppConstants.numberOfElements) elements at the middle of the array",
                              "Insert \(AppConstants.numberOfElements) elements at the end of the array one-by-one",
                              "Insert \(AppConstants.numberOfElements) elements at the end of the array",
                              "Remove \(AppConstants.numberOfElements) elements at the end of the array one-by-one",
                              "Remove \(AppConstants.numberOfElements) elements at the end of the array",
                              "Remove \(AppConstants.numberOfElements) elements at the middle of the array one-by-one",
                              "Remove \(AppConstants.numberOfElements) elements at the middle of the array",
                              "Remove \(AppConstants.numberOfElements) elements at the begining of the array one-by-one",
                              "Remove \(AppConstants.numberOfElements) elements at the begining of the array"]
    
    static let bigButtonID = "bigButton"
    static let collectionViewID = "collectionView"
    
}
